--- a/styles/styles-main.css
+++ b/styles/styles-main.css
@@ -8,8 +8,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: lightgreen; 
-  font-family: 'Montserrat'; 
+  font-family: 'Montserrat';
+  font-size: 16px; 
 }
 /*header & details*/
 header {
@@ -23,16 +23,17 @@ header {
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  gap: 20rem;
+  gap: 18rem;
   margin: 5px;
 }
 #espresso-part, #logo-part, #language{
   display: flex;
   align-items: center;
-  gap: 2rem
+  gap: 1rem;
 }
 #espresso-part {
   font-weight: 700;
+  padding-left: 7px;
 }
 #logo {
   width: 90px;
@@ -44,7 +45,7 @@ header {
 }
 /*/main and containers*/
 main{
-  margin-top: 100px;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -58,47 +59,71 @@ main{
   justify-content:center;
   padding: 20px;
   background-color: white;
+  border: 1px solid blue;
 }
-article{
+#slide1-text {  
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 3rem;
   align-items: center;
-  border: red 2px solid;
-}
-#slide1-text {
   font-weight: 700;
-  font-size: 60px;
-  text-align: center; 
 }
-#front-menuBtn{
-  border-radius: 50px;
-  border: 1px solid ;
-  padding: 10px;
+#slide1-logo{
+  height: 300px;
 }
-#front-drink{
-  height: 550px;
-  padding: 0px 20px;
-  border: red 2px solid;
+#big-menuBtn{
+  background-color: white;
+  border-radius: 15px; 
+  box-shadow: 0px 3px 7px 1px  grey;
+  font-size: 40px;
+  border: 1px solid black;
+  padding: 11px;
+  margin-top: 20px;
+}
+#big-menuBtn:hover{
+  background-color: #6c7a9621;
+}
+#first-drink{
+  height: 600px;
 }
 #coffee-types{
   height: 600px;
-  justify-content: center;
+}
+#dog-photo{
+  height: 600px;
+}
+#slide2{
+  height: 600px;  
+  background-color: #6C7A96;
+  color: white;
+  display: flex;
+  flex-direction: column;
 }
 #slide2-text{
-  
+  font-size: 30px;
+  text-align: center;
+  margin: 180px 80px 80px;
 }
-
-
-
-
-
-
-
-
+#friendly-label{
+  width: 200px;
+  align-self: flex-end;
+}
+.slide3{
+  height: 600px;
+  background-color: #6C7A96;
+  color: white;
+}
+#slide3-text{
+   
+ 
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: center;
+  padding: 40px 8px;
+}
 
 
 
