--- a/styles/styles-main.css
+++ b/styles/styles-main.css
@@ -11,6 +11,10 @@ body {
   font-family: 'Montserrat';
   font-size: 16px; 
 }
+a, a:hover, a:visited{
+  text-decoration: none;
+  color: black;
+}
 /*header & details*/
 header {
   background-color: white;
@@ -39,10 +43,7 @@ header {
   width: 90px;
   margin: 0px 40px;
 }
-.header-link, .header-link:hover, .header-link:visited{
-  color: black;
-  text-decoration: none;
-}
+
 /*/main and containers*/
 main{
   margin-top: 80px;
@@ -59,7 +60,6 @@ main{
   justify-content:center;
   padding: 20px;
   background-color: white;
-  border: 1px solid blue;
 }
 #slide1-text {  
   width: 100%;
@@ -71,7 +71,7 @@ main{
   font-weight: 700;
 }
 #slide1-logo{
-  height: 300px;
+  height: 400px;
 }
 #big-menuBtn{
   background-color: white;
@@ -80,13 +80,14 @@ main{
   font-size: 40px;
   border: 1px solid black;
   padding: 11px;
-  margin-top: 20px;
+  margin-top: 35px;
 }
 #big-menuBtn:hover{
   background-color: #6c7a9621;
 }
 #first-drink{
   height: 600px;
+  padding: 0px 60px;
 }
 #coffee-types{
   height: 600px;
@@ -97,34 +98,59 @@ main{
 #slide2{
   height: 600px;  
   background-color: #6C7A96;
-  color: white;
+  color: whitesmoke;
   display: flex;
   flex-direction: column;
+  line-height: 1.3;
 }
 #slide2-text{
-  font-size: 30px;
+  font-size: 28px;
   text-align: center;
-  margin: 180px 80px 80px;
+  margin: 200px 90px 20px;
 }
 #friendly-label{
   width: 200px;
   align-self: flex-end;
 }
 .slide3{
-  height: 600px;
+  height: 500px;
   background-color: #6C7A96;
-  color: white;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 20px;
+}
+.slide3-text{
+  height: 500px;
+  background-color: #6C7A96;
+  color: whitesmoke;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: center;
+  padding: 0px 40px;
+
+}
+#slide3-about{
+  font-weight: 700;
 }
 #slide3-text{
-   
- 
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  justify-content: center;
-  padding: 40px 8px;
+  line-height: 1.3;
 }
-
+footer{
+  display: flex;
+  gap: 7rem;
+}
+.footer-part{
+  display: flex;
+  gap: 1rem;
+  text-align: center;
+  line-height: 2;
+}
+#insta-link{
+  display: flex;
+  align-items: center;
+}
 
 
 
