--- a/styles/styles-main.css
+++ b/styles/styles-main.css
@@ -4,12 +4,12 @@
         url('../fonts/Montserrat/Montserrat-Italic-VariableFont_wght.ttf') format('truetype');
 }
 body {
-  height: 400vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: 'Montserrat';
   font-size: 16px; 
+  gap:5rem;
 }
 a, a:hover, a:visited{
   text-decoration: none;
@@ -17,18 +17,19 @@ a, a:hover, a:visited{
 }
 /*header & details*/
 header {
-  background-color: white;
+  
   position: fixed;
   width: 100%;
   z-index: 10;
+  background-color: white;
   color: black;
 }
 #header-list {
   display: flex;
   justify-content: center;
-  text-transform: uppercase;
   gap: 18rem;
   margin: 5px;
+  text-transform: uppercase;
 }
 #espresso-part, #logo-part, #language{
   display: flex;
@@ -36,30 +37,30 @@ header {
   gap: 1rem;
 }
 #espresso-part {
-  font-weight: 700;
   padding-left: 7px;
+  font-weight: 700;
 }
 #logo {
   width: 90px;
   margin: 0px 40px;
 }
-
-/*/main and containers*/
+/*main part*/
 main{
-  margin-top: 80px;
   display: flex;
   flex-direction: column;
   gap: 3rem;
+  margin-top: 80px;
 }
 .container{
-  height: 80vh;
   width: 70vw;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content:center;
   padding: 20px;
   background-color: white;
+}
+#coffee-types, #first-drink, #dog-photo{
+  height: 600px;
 }
 #slide1-text {  
   width: 100%;
@@ -86,50 +87,38 @@ main{
   background-color: #6c7a9621;
 }
 #first-drink{
-  height: 600px;
   padding: 0px 60px;
-}
-#coffee-types{
-  height: 600px;
-}
-#dog-photo{
-  height: 600px;
 }
 #slide2{
   height: 600px;  
-  background-color: #6C7A96;
-  color: whitesmoke;
-  display: flex;
+   display: flex;
   flex-direction: column;
   line-height: 1.3;
+  background-color: #6C7A96;
+  color: whitesmoke;
 }
 #slide2-text{
   font-size: 28px;
   text-align: center;
-  margin: 200px 90px 20px;
+  margin: 200px 90px 10px;
 }
 #friendly-label{
   width: 200px;
   align-self: flex-end;
 }
-.slide3{
+.slide3, .slide3-text{
   height: 500px;
-  background-color: #6C7A96;
-  color: whitesmoke;
-  text-align: center;
-  font-size: 20px;
 }
 .slide3-text{
-  height: 500px;
-  background-color: #6C7A96;
-  color: whitesmoke;
-  text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   justify-content: center;
+  text-align: center; 
   padding: 0px 40px;
-
+  gap: 2rem;
+  background-color: #6C7A96;
+  color: whitesmoke;
+  font-size: 20px; 
 }
 #slide3-about{
   font-weight: 700;
@@ -140,6 +129,7 @@ main{
 footer{
   display: flex;
   gap: 7rem;
+  padding: 35px;
 }
 .footer-part{
   display: flex;
